# Ascend-msmemscope

./: CMakeLists.txt  README.md
csrc/analysis/: constant.h  data.h  decompose_analyzer.cpp  decompose_analyzer.h  dump.cpp  dump.h  inefficient_analyzer.cpp  inefficient_analyzer.h  memory_state_manager.h  python_trace_event.h  state_manager.h  stepinner_analyzer.cpp  stepinner_analyzer.h
csrc/event_trace/: describe_trace.h  event_report.cpp  python_trace.cpp  python_trace.h
csrc/event_trace/atb_hooks/: mki_stub.h
csrc/event_trace/kernel_hooks/: kernel_event_trace.cpp  kernel_event_trace.h  runtime_prof_api.cpp  runtime_prof_api.h
csrc/event_trace/memory_watch/: tensor_dumper.cpp  tensor_dumper.h  tensor_monitor.cpp  tensor_monitor.h
csrc/event_trace/mstx_hooks/: mstx_info.h
csrc/framework/: client_parser.cpp
csrc/utility/: cpython.cpp
docs/zh/: .readthedocs.yaml  changelog.md  conf.py  index.md  install_guide.md  memory_analysis.md  memory_profile.md  output_file_spec.md  overview.md  release_note.md  security_statement.md
docs/zh/_static/: custom.css  mermaid_init.js  repo_links.js  right_toc.js
docs/zh/communication_guide/: communication.md  how_to_issue.md
docs/zh/design/: leaks组件实现设计说明书.md
docs/zh/development_guide/: contributing_guide.md  development_guide.md
docs/zh/legal/: disclaimer.md  license_notice.md
example/compare/: README.md
example/decompose/: README.md
example/inefficient/: README.md
example/leaks/: README.md
example/profile/: README.md
example/watch/: README.md
python/msmemscope/: aten_collection.py  optimizer_step_hook.py
test/smoke/: README.md
(+3 files in other folders)
